--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
     <title>👊Chuck Norris Jokes</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h2>👊Chuck Norris Jokes Generator</h2>
+        <form>
+            <div>
+                <label for="number">Number of Jokes</label>
+                <input type="number" id="number">
+            </div>
+            <div>
+                <button class="get-jokes button-primary">Get Jokes</button>
+            </div>
+        </form>
+        <ul class="jokes"></ul>
+    </div>
 
 
     <script src="assets/script.js"></script>
